--- a/NR2020/login/css/style.css
+++ b/NR2020/login/css/style.css
@@ -29,14 +29,31 @@ img{max-width:100%;}
 /*end reset*/
 /****-----start-body----****/
 body{
-	background:url("../images/bg.jpg") no-repeat 0px 0px;
+  background:url("../images/bg.jpg") no-repeat 0px 0px;
+  background-image: -moz-linear-gradient( 135deg, #3c0876cc 0%, #fa0076cc 100%);
+  background-image: -webkit-linear-gradient( 135deg, rgba(60, 8, 118, 0.8) 0%, rgba(250, 0, 118, 0.8) 100%);
+  background-image: -ms-linear-gradient( 135deg, rgba(60, 8, 118, 0.8) 0%, rgba(250, 0, 118, 0.8) 100%);
+  background-image: linear-gradient( 135deg, rgba(60, 8, 118, 0.8) 0%, rgba(250, 0, 118, 0.8) 100%);
   background-size:cover;
   -o-background-size:cover;
   -moz-background-size:cover;
   -webkit-background-size:cover;
   font-family: 'Source Sans Pro', sans-serif;
 
+ }
+ /*
+header {
+  padding: 100px 0 0;
+  text-align: center;
+  color: #FFF;
 }
+
+.bg-gradient {
+  background-image: -moz-linear-gradient( 135deg, rgba(60, 8, 118, 0.8) 0%, rgba(250, 0, 118, 0.8) 100%);
+  background-image: -webkit-linear-gradient( 135deg, rgba(60, 8, 118, 0.8) 0%, rgba(250, 0, 118, 0.8) 100%);
+  background-image: -ms-linear-gradient( 135deg, rgba(60, 8, 118, 0.8) 0%, rgba(250, 0, 118, 0.8) 100%);
+  background-image: linear-gradient( 135deg, rgba(60, 8, 118, 0.8) 0%, rgba(250, 0, 118, 0.8) 100%);
+} */
 .main h1{
   font-size:3em;
   color: #fff;
@@ -82,7 +99,7 @@ i.resp-tab-item.lost {
   border:none;
   color: #fff;
   font-size: 1em;
-   background:#ba3627; 
+  background: #9a10b3;
   text-transform: uppercase;
   cursor: pointer;
   padding:1.3em 0;
@@ -107,9 +124,9 @@ i.resp-tab-item.lost {
 }
 
 .resp-tab-active {
-   background:#eb5242;
-  text-shadow: none;
-  color:#fff;
+   background: #9a10b3;
+   text-shadow: none;
+   color:#fff;
 }
 .resp-tabs-container {
   padding: 0px;
@@ -627,6 +644,10 @@ form.sub input[type="password"] {
 @media (max-width:1024px){
   body {
   background: url("../images/bg.jpg") no-repeat 0px 0px;
+  background-image: -moz-linear-gradient( 135deg, #3c0876cc 0%, #fa0076cc 100%);
+  background-image: -webkit-linear-gradient( 135deg, rgba(60, 8, 118, 0.8) 0%, rgba(250, 0, 118, 0.8) 100%);
+  background-image: -ms-linear-gradient( 135deg, rgba(60, 8, 118, 0.8) 0%, rgba(250, 0, 118, 0.8) 100%);
+  background-image: linear-gradient( 135deg, rgba(60, 8, 118, 0.8) 0%, rgba(250, 0, 118, 0.8) 100%);
   padding-bottom: 4em;
 }
  .sap_tabs {
@@ -677,6 +698,10 @@ form.sub input[type="password"] {
 @media (max-width:480px){
   body {
   background: url("../images/bg.jpg") no-repeat 0px 0px;
+  background-image: -moz-linear-gradient( 135deg, #3c0876cc 0%, #fa0076cc 100%);
+  background-image: -webkit-linear-gradient( 135deg, rgba(60, 8, 118, 0.8) 0%, rgba(250, 0, 118, 0.8) 100%);
+  background-image: -ms-linear-gradient( 135deg, rgba(60, 8, 118, 0.8) 0%, rgba(250, 0, 118, 0.8) 100%);
+  background-image: linear-gradient( 135deg, rgba(60, 8, 118, 0.8) 0%, rgba(250, 0, 118, 0.8) 100%);
   padding-bottom: 4em;
 }
   .top-img img {
